--- a/src/main.scss
+++ b/src/main.scss
@@ -5,8 +5,25 @@
   list-style: none;
   text-decoration: none;
 }
+html{
+  scroll-behavior: smooth;
+}
+body{
+  background: #fff;
+}
 .container {
   max-width: 1200px;
   margin: 0 auto;
-  background-color: aqua;
+}
+
+:root{
+  --bg-color: #F9F8F8;
+  --color:  #274C5B;
+  --grean-color: #7EB693;
+  --yellow-color: #EFD372;
+  --gray-color: #D4D4D4;
+  --blue-color: #EFF6F1;
+  --dark-black-color: #525C60;
+
+
 }
