--- a/src/main.scss
+++ b/src/main.scss
@@ -17,8 +17,9 @@ body{
 }
 
 :root{
+  --color:#FFF;
   --bg-color: #F9F8F8;
-  --color:  #274C5B;
+  --dark-color:  #274C5B;
   --grean-color: #7EB693;
   --yellow-color: #EFD372;
   --gray-color: #D4D4D4;
