--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,5 +1,8 @@
 .homeImg {
   background-image: url("/public/assets/home/Image.png");
-  width: 1000px;
-  height: 800px;
+  width: 100%;
+  height: 898px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
