--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -106,6 +106,8 @@
 
       p {
         padding-top: 26px;
+        padding-right: 40px;
+        padding-left: 40px;
         font-size: 18px;
         font-family: Open Sans;
         font-weight: 400;
