--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -4,5 +4,5 @@
   height: 898px;
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: center center;
 }
