--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,16 +1,32 @@
 .homeImg {
   background-image: url("/public/assets/home/Banner.jpg");
   width: 100%;
-  height: 898px;
+  height: 90vh;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 }
 .center_contant_home {
-  padding-left: 260px;
-  padding-top: 350px;
+  padding-left: 50px;
+  padding-top: 100px;
 }
 h3 {
   color: #68a47f;
-  font-family: "Yellowtail";
+  font-family: "Yellowtail", cursive;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+h1 {
+  color: #274c5b;
+  font-family: Roboto;
+  font-size: 70px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: normal;
+}
+button {
+  border-radius: 16px;
+  background: #efd372;
 }
