--- a/src/pages/Shop/Shop.scss
+++ b/src/pages/Shop/Shop.scss
@@ -19,4 +19,11 @@
             line-height: normal; 
         }
     }
+
+}
+.shop-card{
+    margin: 90px 0 69px 0 ;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
