--- a/src/components/Ui/Card/Card.scss
+++ b/src/components/Ui/Card/Card.scss
@@ -1,6 +1,6 @@
 .card{
     width: 290px;
-    height: 420px;
+    height: 455px;
     border-radius: 30px;
     background: var(--bg-color);
     padding: 17px 30px;
@@ -10,6 +10,7 @@
     justify-content: center;
     align-items: start;
     gap: 9.5rem;
+    position: relative;
 
     .card-img{
         position: relative;
@@ -20,10 +21,11 @@
         justify-content: center;
 
         img{
-            width: 210px;
+            width: 180px;
             position: absolute;
-            top: -140px;
-            left: 0px;
+            top: -100px;
+            left: 10px;
+            right: 0;
             bottom: 0;
             filter: drop-shadow(-15px 20px 15px #c5bfbf);
            
@@ -31,7 +33,8 @@
     }
 
     .card-variants{
-        padding: 5px 12px;
+        margin-top: 1rem;
+        padding: 8px 12px;
         color: var(--color);
         background: var(--dark-color);
         border: none;
