--- a/src/pages/Home/Section_one/Section_one.css
+++ b/src/pages/Home/Section_one/Section_one.css
@@ -67,7 +67,7 @@ h3 {
   margin-bottom: 50px;
   border-radius: 30px;
   cursor: pointer;
-  box-shadow: 0 0px 15px 0.1px;
+  box-shadow: 0 0px 7px 0.1px;
   background: rgba(207, 189, 189, 0.4) #9e9a9a;
   transform-origin: center;
   transition: all 0.5s;
@@ -113,7 +113,7 @@ h3 {
   margin-bottom: 50px;
   border-radius: 30px;
   cursor: pointer;
-  box-shadow: 0 0px 15px 0.1px;
+  box-shadow: 2px 0px 7px 0.1px;
 
   background: rgba(0, 0, 0, 0.4) #000;
   transform-origin: center;
@@ -141,11 +141,9 @@ h3 {
   0% {
     margin-top: 20vh;
   }
-  ,
   50% {
     margin-top: 18vh;
   }
-  ,
   100% {
     margin-top: 20vh;
   }
