--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -11,6 +11,12 @@
   align-items: start;
   gap: 9.5rem;
   position: relative;
+  transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in;
+  cursor: pointer;
+  &:hover{
+    box-shadow: 0px 14px 30px rgba(0,0,0,0.06);
+    transform:translateY(-5px);
+  }
 
   .card-img {
     position: relative;
