--- a/src/components/Drawer/Drawer.scss
+++ b/src/components/Drawer/Drawer.scss
@@ -108,14 +108,19 @@
     border-radius: 20px;
     overflow: hidden;
     padding: 20px ;
+    position: relative;
   
     .cartItemImg{
-      width: 70px;
-      height: 70px;
-      background-size: contain;
-      background-repeat: no-repeat;
-      background-position: 0 -3px;
-      margin-right: 20px;
+      width: 80px;
+      height: 80px;
+      border-radius: 10px;
+      background: #F9F8F8;
+      img{
+        width: 90px;
+        position: absolute;
+        top:17px;
+        left: 14px;
+      }
     }
     p{
       font-size: 16px;
