--- a/src/components/Header/Search/Search.css
+++ b/src/components/Header/Search/Search.css
@@ -4,8 +4,7 @@
   align-items: center;
 }
 .inputSearch {
-  width: 376px;
-  height: 50px;
+  padding: 10px 140px 10px 20px;
   background-color: #f0f0f0;
   border-radius: 30px;
   padding-left: 10px;
@@ -14,7 +13,7 @@
 
   color: #274c5b;
   font-family: Roboto;
-  font-size: 18px;
+  font-size: 14px;
   font-style: normal;
   font-weight: 600;
   line-height: normal;
@@ -23,21 +22,20 @@
   border-radius: 50%;
   background-color: #7eb693;
   color: aliceblue;
-  width: 46px;
-  height: 46px;
-  font-size: 24px;
-  margin-top: 2px;
-  text-align: center;
-  padding-top: 10px;
+  width: 35px;
+  height: 35px;
+  font-size: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: absolute;
-  top: 0px;
-  right: 183px;
+  top: 0.24rem;
+  right: 140px;
 }
 
 .buttonCart {
   cursor: pointer;
-  height: 50px;
-  width: 159px;
+  padding: 10px 49px;
   opacity: 1.3;
   border-radius: 30px;
   padding-left: 10px;
@@ -55,13 +53,13 @@
   border-radius: 50%;
   background-color: #274c5b;
   color: aliceblue;
-  width: 46px;
-  height: 46px;
-  margin-top: 2px;
-  font-size: 24px;
+  width: 40.5px;
+  height: 40.5px;
+  font-size: 20px;
   text-align: center;
   padding-top: 10px;
   position: absolute;
-  right: 110px;
+  right: 0;
   top: 0;
+
 }
